03-gitops/apps/02-monitoring/kube-prometheus-stack/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.cluster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
#  tls:
#    - hosts:
#        - prometheus.cluster
#      secretName: prometheus-ui-tls
